added dark mode button

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <h1 id="title">TO DO</h1>
+        <button id="mode-btn">light mode</button>
         <input id="text-input" type="text">
         <button id="submit-btn">submit</button>
         
